--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Yeseva+One&display=swap&subset=cyrillic" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Yeseva+One&display=swap&subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
-  <link rel="stylesheet" href="css/animate.css">
+  <link rel="stylesheet" href="css/animate.css"> -->
   <link rel="stylesheet" href="css/style.css">
-  <link rel="shortcut icon" type="image/png" href="img/ico/favicon.ico"/>
-  <title>Repair Design Project</title>
+  <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
+  <title>SAYTSPB</title>
 </head>
 <body>
   <!-- Yandex.Metrika counter -->
-  <script>
+  <!-- <script>
     (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
     m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
     (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
@@ -23,24 +23,25 @@
         trackLinks:true,
         accurateTrackBounce:true,
         webvisor:true
-    });
+    }); -->
   </script><!-- end of Yandex.Metrika counter -->
   <header class="header">
     <div class="container header__container">
       <div class="menu header__menu">
-        <a href="#home"><div class="logo menu__logo wow bounceInLeft">Repair Design Project</div></a>
+        <a href="#home"><div class="logo menu__logo">
+          <img src="img/favicon.png" alt="logo" class="logo__img">
+          <p class="logo__mark">SAYTSPB</p>
+        </div></a>
         <nav class="nav menu__nav"> 
-          <a href="#home" class="nav__item">Главная</a>
-          <a href="#projects" class="nav__item">Проекты</a>
-          <a href="#control" class="nav__item">Контроль</a>
-          <a href="#types" class="nav__item">Виды ремонта</a>
-          <a href="#design" class="nav__item">Дизайн</a>
+          <a href="#home" class="nav__item">Продвижение</a>
+          <a href="#projects" class="nav__item">Аудит</a>
+          <a href="#control" class="nav__item">Цены</a>
           <a href="#contacts" class="nav__item">Контакты</a>
         </nav>
         <!-- /.nav -->
         <div class="contacts menu__contacts">
-          <a href="tel:+79997683299" class="phone contacts__phone wow tada" data-wow-delay="20s" data-wow-iteration="3">+7 (999) 768-32-99</a>
-          <button class="button contacts__button button--primary button--contacts wow bounceInRight" data-toggle='modal' data-wow-delay="1s">Заказать звонок</button>
+          <a href="tel:+78129921030" class="phone contacts__phone">+7(812)-992-10-30</a>
+          <button class="button contacts__button button--primary button--contacts" data-toggle='modal'>Заказать звонок</button>
         </div>
       </div>
       <!-- /.menu -->
