refact: rewritten code to improve header block adaptability. PP - OK.

--- a/index.html
+++ b/index.html
@@ -32,16 +32,19 @@
           <img src="img/favicon.png" alt="logo" class="logo__img">
           <p class="logo__mark">SAYTSPB</p>
         </div></a>
-        <nav class="nav menu__nav"> 
-          <a href="#home" class="nav__item">Продвижение</a>
-          <a href="#projects" class="nav__item">Аудит</a>
-          <a href="#control" class="nav__item">Цены</a>
-          <a href="#contacts" class="nav__item">Контакты</a>
-        </nav>
-        <!-- /.nav -->
+        <div class="nav__container">
+          <nav class="nav menu__nav">
+            <a href="#home" class="nav__item">Продвижение</a>
+            <a href="#projects" class="nav__item">Аудит</a>
+            <a href="#control" class="nav__item">Цены</a>
+            <a href="#contacts" class="nav__item">Контакты</a>
+          </nav>
+          <!-- /.nav -->
+        </div>
+        
         <div class="contacts menu__contacts">
           <a href="tel:+78129921030" class="phone contacts__phone">+7(812)-992-10-30</a>
-          <button class="button contacts__button button--primary button--contacts" data-toggle='modal'>Заказать звонок</button>
+          <button class="button contacts__button button--primary" data-toggle='modal'>Заказать звонок</button>
         </div>
       </div>
       <!-- /.menu -->
