feat: Added services section. Pixel Perfect verified.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="hero__content">
             <h1 class="title hero__title">Продвижение Сайтов
               <span class="title--primary">в&nbsp;Санкт-Петербурге</span></h1>
-            <p class="hero__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+            <p class="hero__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
             <button class="button hero__button button--primary" data-toggle='modal'>Обратный звонок</button>
           </div>
           <!-- /.hero__content -->
@@ -217,46 +217,89 @@
       </div>
       <!-- /.container -->
     </section>
-    <!-- /.section section-dark projects -->
-    <section class="section control">
-      <div class="container control__container">
-        <div class="section-title control__section-title section-title--light">
-          <h2 class="section-title__heading control__heading" id="control">Онлайн контроль</h2>
-          <!-- /.section-title__heading -->
-          <div class="section-title__image"><img src="img/ico/camera.svg" alt=""></div>
-          <!-- /.section-title__image -->
+    <!-- /.section advantages  -->
+    <section class="section services section__services">
+      <div class="container services__container">
+        <h2 class="section-title services__section-title">Наши Услуги</h2>
+        <p class="section-title__text services__section-title__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud ex</p>
+        <div class="row">
+          <div class="col-30 services__col">
+            <div class="card card__services">
+              <div class="card__img card__img__services">
+                <img src="/img/icons/Increase.png" alt="">
+              </div>
+              <!-- /.card__img -->
+              <h2 class="card__title card__title__services">Продвижение Сайтов</h2>
+              <!-- /.card__title -->
+              <div class="card__description card__description__services">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim</div>
+              <!-- /.card_description -->
+            </div>
+            <!-- /.card -->
+          </div>
+          <!-- /.col-30 -->
+          <div class="col-30 services__col">
+            <div class="card card__services">
+              <div class="card__img card__img__services">
+                <img src="/img/icons/accounting.png" alt="">
+              </div>
+              <!-- /.card__img -->
+              <h2 class="card__title card__title__services">Аудит Сайтов</h2>
+              <!-- /.card__title -->
+              <div class="card__description card__description__services">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim</div>
+              <!-- /.card_description -->
+            </div>
+            <!-- /.card -->
+          </div>
+          <!-- /.col-30 -->
+          <div class="col-30 services__col">
+            <div class="card card__services">
+              <div class="card__img card__img__services">
+                <img src="/img/icons/template.png" alt="">
+              </div>
+              <!-- /.card__img -->
+              <h2 class="card__title card__title__services">Создание Сайтов</h2>
+              <!-- /.card__title -->
+              <div class="card__description card__description__services">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim</div>
+              <!-- /.card_description -->
+            </div>
+            <!-- /.card -->
+          </div>
+          <!-- /.col-30 -->
+          <div class="col-30 services__col">
+            <div class="card card__services">
+              <div class="card__img card__img__services">
+                <img src="/img/icons/commercial.png" alt="">
+              </div>
+              <!-- /.card__img -->
+              <h2 class="card__title card__title__services">Контекстная Реклама</h2>
+              <!-- /.card__title -->
+              <div class="card__description card__description__services">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim</div>
+              <!-- /.card_description -->
+            </div>
+            <!-- /.card -->
+          </div>
+          <!-- /.col-30 -->
+          <div class="col-30 services__col">
+            <div class="card card__services">
+              <div class="card__img card__img__services">
+                <img src="/img/icons/trust.png" alt="">
+              </div>
+              <!-- /.card__img -->
+              <h2 class="card__title card__title__services">Поддержка</h2>
+              <!-- /.card__title -->
+              <div class="card__description card__description__services">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim</div>
+              <!-- /.card_description -->
+            </div>
+            <!-- /.card -->
+          </div>
+          <!-- /.col-30 -->
         </div>
-        <!-- /.section-title -->
-        <div class="control__video video" id="player">
-          <script src="https://www.youtube.com/iframe_api"></script>
-          <img src="img/ico/play-button.svg" alt="play" class="video__play">
-        </div>
-        <!-- /.control__video video -->
-        <p class="control__text">
-          На каждом объекте установлена ​​камера, которая транслирует ход работы на часах. В любой момент вы можете зайти на наш сайт и следить за ходом работы в вашей квартире. Посмотрите прямую трансляцию с одного из наших объектов! Оставьте заявку ниже чтобы получить ссылку на трансляцию.
-        </p>
-        <form action="send.php" method="POST" class="form control__form" onsubmit="ym(61432480, 'reachGoal', 'controlFormSend'); return true;">
-          <input type="hidden" name="formName" value="control">
-          <div class="control__input-group">
-            <label for="control__user-name" class="label form__label control__label">Имя</label>
-            <input type="text" name="userName" class="input form__input control__input" id="control__user-name" placeholder="Как вас зовут:"  autocomplete="off">
-          </div>
-          <div class="control__input-group">
-            <label for="control__user-phone" class="label form__label control__label">Телефон</label>
-            <input type="tel" name="userPhone" class="input form__input control__input" id="control__user-phone" placeholder="Ваш номер телефона:"  autocomplete="off">
-          </div>
-          <button class="button button--primary control__button">Отправить</button>
-          <div class="policy control__policy">
-            <input type="checkbox" name="controlPolicyCheckbox" id="controlPolicyCheckbox" class="policy__checkbox">
-            <label for="controlPolicyCheckbox" class="policy__label control__policy-label">Я соглашаюсь с обработкой данных</label>
-          </div>
-          <!-- /.policy -->
-        </form>
-        <!-- /.form control__form -->
-      </div>
-      <!-- /.container -->
+        <!-- /.row -->
+     </div>
+    <!-- /.section services container -->
     </section>
-    <!-- /.section control -->
+    <!-- /.section services section__services -->
+    
 
     <section class="section types" id="types">
       <div class="container types__container">
@@ -282,7 +325,6 @@
                   <li class="card__item">Замена розеток и выключателей</li>
                   <li class="card__item">Замена дверей</li>
                 </ul>
-                <strong class="card__pricetag">от 900 руб / m<sup>2</sup></strong>
               </div>
             </div>
           </div>
@@ -301,7 +343,6 @@
                   <li class="card__item">Замена розеток и выключателей</li>
                   <li class="card__item">Замена дверей</li>
                 </ul>
-                <strong class="card__pricetag">от 1800 руб / m<sup>2</sup></strong>
               </div>
             </div>
           </div>
@@ -319,7 +360,6 @@
                   <li class="card__item">Замена розеток и выключателей</li>
                   <li class="card__item">Замена дверей</li>
                 </ul>
-                <strong class="card__pricetag">от 4000 руб / m<sup>2</sup></strong>
               </div>
             </div>
           </div>
@@ -351,7 +391,6 @@
                   <li class="card__item">Планировка мебели</li>
                   <li class="card__item">Сантехнический план</li>
                 </ul>
-                <strong class="card__pricetag">150 руб / m<sup>2</sup></strong>
               </div>
             </div>
           </div>
@@ -369,7 +408,6 @@
                   <li class="card__item">План электрики</li>
                   <li class="card__item">План света</li>
                 </ul>
-                <strong class="card__pricetag">400 руб / m<sup>2</sup></strong>
               </div>
             </div>
           </div>
@@ -393,7 +431,6 @@
                   <li class="card__item card__item--hidden">Выезд на подбор материалов</li>
                   <li class="card__item card__item--hidden">Выбор мебели</li>
                 </ul>
-                <strong class="card__pricetag">900 руб / m<sup>2</sup></strong>
               </div>
             </div>
           </div>
