--- a/index.html
+++ b/index.html
@@ -299,7 +299,37 @@
     <!-- /.section services container -->
     </section>
     <!-- /.section services section__services -->
-    
+
+    <section class="section cost-calc__section">
+      <div class="container cost-calc__container">
+        <div class="cost-calc__wrap">
+          <h3 class="cost-calc__title">Узнать стоимость</h3>
+          <form action="send.php" method="POST" class="form cost-calc__form" onsubmit="ym(61432480, 'reachGoal', 'costCalcFormSend'); return true;">
+            <input type="hidden" name="formName" value="costCalc">
+            <div class="input-group cost-calc__input-group">
+              <label for="user-name_question" class="label form__label cost-calc__form__label">Имя</label>
+              <input type="text" name="userName" class="input form__input cost-calc__input" id="user-name_cost-calc" placeholder="Иван Иванов" autocomplete="off">
+            </div>
+            <div class="input-group cost-calc__input-group">
+              <label for="user-email_cost-calc" class="label form__label cost-calc__form__label">E-Mail</label>
+              <input type="email" name="userEmail" class="input form__input cost-calc__input" id="user-email_cost-calc" placeholder="ivanov@gmail.com" autocomplete="off">
+            </div>
+            <div class="input-group cost-calc__input-group cost-calc__input-group">
+              <label for="user-site" class="label form__label cost-calc__form__label">Адрес веб-сайта</label>
+              <input type="text" name="userSite" class="input form__input cost-calc__input" id="user-question" placeholder="tatsianapavlenko.ru" autocomplete="off">
+            </div>
+            <div class="input-group cost-calc__input-group cost-calc__input-group">
+              <label for="user-message" class="label form__label cost-calc__form__label">Сообщение</label>
+              <input type="text" name="userMessage" class="input form__input cost-calc__input" id="user-message" placeholder="Введите Ваше сообщение" autocomplete="off">
+            </div>
+            <button class="button button--primary cost-calc__button">Узнать стоимость</button>
+          </form>
+        </div>
+        <!-- /.cost-calc-wrap -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.section cost-calc__section -->
 
     <section class="section types" id="types">
       <div class="container types__container">
@@ -546,10 +576,30 @@
     <!-- /.modal__dialog -->
   </div>
   <!-- /.error modal -->
-  <div class="button__scroll-up__flex-block button__scroll-up__flex-block">
-    <div class="button__scroll-up__container">
-      <button class="button button__scroll-up button--primary">Наверх</button>
+  <div class="menu__scroll__flex-block menu__scroll__flex-block--hidden">
+    <div class="container menu__scroll__container">
+      <div class="menu menu__scroll">
+        <a href="#home"><div class="logo menu__logo">
+          <img src="img/favicon.png" alt="logo" class="logo__img">
+          <p class="logo__mark">SAYTSPB</p>
+        </div></a>
+        <div class="nav__container">
+          <nav class="nav menu__nav">
+            <a href="#home" class="nav__item">Продвижение</a>
+            <a href="#projects" class="nav__item">Аудит</a>
+            <a href="#control" class="nav__item">Цены</a>
+            <a href="#contacts" class="nav__item">Контакты</a>
+          </nav>
+          <!-- /.nav -->
+        </div>
+        <div class="contacts menu__contacts">
+          <a href="tel:+78129921030" class="phone contacts__phone">+7(812)-992-10-30</a>
+          <button class="button contacts__button" data-toggle='modal'>Заказать звонок</button>
+        </div>
+      </div>
+      <!-- /.menu -->
     </div>
+    <!-- /.container -->
   </div>
   <!-- /.button__flex-block -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
