feat: Added cases section. Pixel Perfect verified.

--- a/index.html
+++ b/index.html
@@ -331,6 +331,28 @@
     </section>
     <!-- /.section cost-calc__section -->
 
+    <section class="section cases__section">
+      <div class="container cases__container">
+        <h2 class="title cases__title">Наши Кейсы</h2>
+        <p class="cases__title__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud ex</p>
+        <div class="slider cases__slider">
+          <div class="cases__slider__button">
+            <img src="/img/icons/left-arrow.svg" alt="" class="slider__button slider__button__left">
+          </div>
+          <div class="cases__slider__image__container">
+            <img src="/img/cases/case-1.jpg" alt="" class="cases__slider__image">
+          </div>
+          <div class="cases__slider__button">
+            <img src="/img/icons/right-arrow.svg" alt="" class="slider__button slider__button__right">
+          </div>
+        </div>
+        <button class="button cases__button button--primary">Портфолио</button>
+      </div>
+      <!-- /.container cases__container -->
+    </section>
+    <!-- /.section cases__section -->
+    
+
     <section class="section types" id="types">
       <div class="container types__container">
         <div class="section-title types__section-title">
