--- a/index.html
+++ b/index.html
@@ -341,6 +341,8 @@
           </div>
           <div class="cases__slider__image__container">
             <img src="/img/cases/case-1.jpg" alt="" class="cases__slider__image">
+            <img src="/img/cases/case-2.jpg" alt="" class="cases__slider__image">
+            <img src="/img/cases/case-3.jpg" alt="" class="cases__slider__image">
           </div>
           <div class="cases__slider__button">
             <img src="/img/icons/right-arrow.svg" alt="" class="slider__button slider__button__right">
