feat: section footer was added. Pixel Perfect - OK

--- a/index.html
+++ b/index.html
@@ -555,11 +555,23 @@
       <!-- /.container -->
     </section>
     <!-- /.section question__section -->
+    <footer class="section footer footer__section">
+        <div class="container footer__container">
+          <div class="logo footer__logo">
+            <img src="img/favicon.png" alt="logo" class="logo__img footer__logo__img">
+            <p class="footer__logo__mark">SAYTSPB</p>
+          </div></a>
+          <div class="footer__horizontal-line"></div>
+          <div class="footer__copyrights">Copyright &copy; 2020. Glo Academy. Все права защищены</div>
+        </div>
+        <!-- /.container footer__container -->
+      </footer>
+      <!-- /.section footer__section -->
 
 
   </main>
 
-
+  
 
   <div class="modal">
     <div class="modal__dialog">
